--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,6 @@
     "no-console": "off",
     "comma-dangle": ["error", "always-multiline"],
     "lines-between-class-members": "off",
+    "no-underscore-dangle": "off"
   }
 }
