--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@types/dotenv": "^6.1.0",
     "@types/minimist": "^1.2.0",
     "@types/node": "^11.9.3",
-    "@typescript-eslint/parser": "^1.4.0",
+    "@typescript-eslint/parser": "^2",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint": "^6",
+    "eslint-config-airbnb-base": "^14",
+    "eslint-plugin-import": "^2.18.2",
     "minimist": "^1.2.0",
     "node-fetch": "^2.3.0",
     "ts-node": "^8.0.2",
