--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-console": "off",
     "comma-dangle": ["error", "always-multiline"],
     "lines-between-class-members": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "class-methods-use-this": "off"
   }
 }
